refactor(product): 좋아요 통계 서비스 제거 및 리팩토링
- ProductLikeStatsService 의존성 제거
- 좋아요 등록 및 취소 시 통계 업데이트 로직 삭제
- ProductFacade에서 좋아요 수 조회 로직을 LikeService로 이동